[project]
name = "tcod-roguelike"
version = "0.1.0"
description = "A roguelike game built with tcod"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tcod",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "isort",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.per-file-ignores]
# Allow camelCase assert methods in tests (following unittest convention)
"tests/*.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src"]
known_first_party = ["src"]
